Change to work in AWS environment. Just by docker-compose up -d.

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -40,5 +40,5 @@ services:
     volumes:
       - ../web:/home/user1/dev
       - ../gunicorn:/var/run/gunicorn
-    # command: bash -c "gunicorn myprj.wsgi --bind=unix:/var/run/gunicorn/gunicorn.sock"
+    command: bash -c "cd /home/user1/dev/ && gunicorn myprj.wsgi --bind=unix:/var/run/gunicorn/gunicorn.sock"
  
