--- a/.devcontainer/web/gunicorn.conf
+++ b/.devcontainer/web/gunicorn.conf
@@ -4,7 +4,8 @@ upstream django-gunicorn {
 
 server {
     listen 80;
-    server_name localgost;
+    server_name 18.191.87.99;
+    # server_name localgost;
 
     location / {
         try_files $uri @gunicorn;
