--- a/.devcontainer/web/gunicorn.conf
+++ b/.devcontainer/web/gunicorn.conf
@@ -7,6 +7,10 @@ server {
     server_name 18.191.87.99;
     # server_name localgost;
 
+    location /static/ {
+                root /home/user1/dev;
+        }
+
     location / {
         try_files $uri @gunicorn;
     }
