--- a/.devcontainer/web/gunicorn.conf
+++ b/.devcontainer/web/gunicorn.conf
@@ -8,7 +8,7 @@ server {
     # server_name localgost;
 
     location /static/ {
-                root /home/user1/dev;
+                root /home/user1/dev/main/static;
         }
 
     location / {
