Fixed an issue where Nginx couldn't read CSS file. couldn't read a static file on Django from Nginx.

--- a/.devcontainer/web/gunicorn.conf
+++ b/.devcontainer/web/gunicorn.conf
@@ -8,7 +8,7 @@ server {
     # server_name localgost;
 
     location /static/ {
-                root /home/user1/dev/main/static;
+                root /home/user1/dev/main;
         }
 
     location / {
